# course-work

./: .gitignore  CMakeLists.txt  buildrun.sh
src/: gui.c  gui.h  gui_state.c  gui_state.h  main.c  service.c  service.h  util.c  util.h
ui/: gui.ui
